--- a/src/components/home/hero/index.astro
+++ b/src/components/home/hero/index.astro
@@ -46,7 +46,7 @@ const heading_data = [
 
 ---
 
-<section class="pt-36 pb-14 bg-home">
+<section class="lg:h-dvh pt-36 pb-14 bg-home">
     <Container>
         <div class="grid gap-6 lg:gap-10 grid-cols-1 lg:grid-cols-2 pt-20">
             <div class="hero-slider flex items-center justify-center">
