--- a/src/components/home/about/index.astro
+++ b/src/components/home/about/index.astro
@@ -1,6 +1,40 @@
 ---
 
----
-<section>
+// IMPORT ATOMS
+import ButtonOutlined from "@/atoms-diksha/buttons/outlined/index.astro"
+import Heading2 from "@/atoms-diksha/headings/two/6xl/black/color-primary/index.astro"
+import Heading6 from "@/atoms-diksha/headings/six/color-primary/index.astro"
+import ParagraphExtralight from "@/atoms-diksha/paragraphs/extralight/color-primary/index.astro"
 
+---
+
+<section class="lg:px-16 lg:py-24 px-6 py-12">
+    <div class="flex flex-col gap-6 lg:flex-row justify-between items-center">
+        <div class="relative">
+            <img width="396" height="650" src="https://beaconcollective.com/wp-content/uploads/2023/09/about-2.png" alt="image" srcset="https://beaconcollective.com/wp-content/uploads/2023/09/about-2.png 396w, https://beaconcollective.com/wp-content/uploads/2023/09/about-2-183x300.png 183w" sizes="(max-width: 396px) 100vw, 396px">
+            <img src="https://beaconcollective.com/wp-content/uploads/2023/09/about-1.png" alt="" class="hidden xl:block absolute top-20 -right-40 -z-10">
+    </div>
+        <div class="lg:w-1/2 flex flex-col gap-6">
+            <div class="flex gap-6 items-center">
+                <hr class="w-16 border-t-2 border-color-secondary"/>
+                <Heading6>ABOUT OUR DESIGN AGENCY</Heading6>
+            </div>
+            <Heading2>
+                We design visual solutions for greater impact
+                <span class="text-color-secondary">.</span>
+            </Heading2>
+            <ParagraphExtralight>
+                Founded in 2013, The Beacon Design Collective is an award-winning creative agency offering its services exclusively to organizations in the sustainability and social justice sectors. We’re not just a design agency. We share a common trait with our clients: our passion for social justice and sustainability. As a carbon-negative company with a diverse and inclusive team, we are a values-aligned partner for our clients.
+            </ParagraphExtralight>
+            <ParagraphExtralight>
+                We create brands and help them communicate better and grow stronger through our strategic design expertise. We offer a comprehensive range of services – from branding to strategic campaigns to graphic design– all tailored to support your mission of making a lasting, positive impact on the world.
+            </ParagraphExtralight>
+            <div>
+                <ButtonOutlined>
+                <a href="$" class="underline hover:no-underline">ABOUT US</a>
+                <span class="no-underline">↗︎</span>
+                </ButtonOutlined>
+            </div>
+        </div>
+    </div>
 </section>
