feat: create blogs component

--- a/src/components/home/blogs/index.astro
+++ b/src/components/home/blogs/index.astro
@@ -1,6 +1,93 @@
 ---
 
+// IMPORT ASTRO ATOMS
+import HeadingTwo6xlExtraboldCenter from "@/atoms/atoms-nandini/headings/two/6xl/extrabold/center/index.astro"
+import ParagraphBaseSemibold from "@/atoms/atoms-nandini/paragraphs/base/semibold/index.astro"
+import ParagraphCenter from "@/atoms/atoms-nandini/paragraphs/center/index.astro"
+import ParagraphSmallWhite from "@/atoms/atoms-nandini/paragraphs/sm/white/index.astro"
+import ParagraphLargeBoldWhite from "@/atoms/atoms-nandini/paragraphs/lg/bold/white/index.astro"
+import ParagraphSmall from "@/atoms/atoms-nandini/paragraphs/sm/index.astro"
+import ParagraphXSExtrabold from "@/atoms/atoms-nandini/paragraphs/xs/extrabold/index.astro"
+import PictureInternal from "@/atoms/picture/internal/index.astro"
+
+// HARDCODED DATA
+const blogs=[
+    {
+        card1_date:"Jun 26, 2024",
+        card2_date:"Jun 18, 2024",
+        card3_date:"May 10, 2024",
+        card4_date:"Mar 12, 2024",
+        card1_desc:"FOR IMMEDIATE RELEASE: The Beacon Design Collective Wins GOLD in VEGA Awards for “Being Métis Makes Me Happy!”",
+        card2_desc:"Harnessing the Power of AI: Transform Your Nonprofit’s Fundraising, Design, and Marketing",
+        card3_desc:"The Simplicity and Impact of Google Ad Grants, and How to Get It",
+        card4_desc:"Choosing the Right Fundraising Platform: Givebutter, Donorbox, and Classy Compared",
+        card_title:"SOCIAL JUSTICE",
+        heading:"FROM OUR BLOG",
+        title:"Design and branding insights.",
+        image_details:"ErinHowe Jones | Jun 27, 2024",
+        image_title:"Welcome to Our New Client Strategist and ...",
+    }
+]
+
 ---
 <section>
-
+    {
+        blogs.map((item)=>{
+            return(
+                <div class="grid gap-10 mx-4 my-10">
+                    <div class="grid gap-5">
+                        <ParagraphCenter>{ item.heading }</ParagraphCenter>
+                        <HeadingTwo6xlExtraboldCenter>{ item.title }</HeadingTwo6xlExtraboldCenter>
+                    </div>
+                    <div class="flex flex-wrap gap-y-5 md:flex md:flex-wrap md:gap-5 lg:justify-center">
+                        <div class="relative w-full md:flex md:flex-wrap md:w-96 2xl:w-4/12 rounded-xl overflow-hidden">
+                            <PictureInternal
+                                alternative_text="Image"
+                                source="/images/blogs.png"
+                            />
+                            <div class="absolute bg-gradient-to-b inset-0 from-transparent to-blue-950 object-cover opacity-90 rounded-xl"></div>
+                            <div class="grid gap-3 absolute bottom-4 left-4">
+                                <ParagraphSmallWhite>{ item.image_details }</ParagraphSmallWhite>
+                                <ParagraphLargeBoldWhite>{ item.image_title }</ParagraphLargeBoldWhite>
+                            </div>
+                        </div>
+                        <div class="grid grid-rows-4 gap-5 md:grid md:grid-rows-4 lg:grid lg:grid-rows-2 lg:gap-2">
+                            <div class="grid row-span-2 gap-5 md:row-span-2 md:gap-5 lg:flex lg:gap-2">
+                                <div class="border rounded-lg grid gap-5 p-5 w-full md:w-96 lg:w-72 hover:text-white hover:bg-black">
+                                    <div class="space-y-2">
+                                        <ParagraphXSExtrabold>{ item.card_title }</ParagraphXSExtrabold>
+                                        <ParagraphBaseSemibold>{ item.card1_desc }</ParagraphBaseSemibold>
+                                    </div>
+                                    <ParagraphSmall>{ item.card1_date }</ParagraphSmall>
+                                </div>
+                                <div class="border rounded-2xl grid gap-5 p-4 w-full md:w-96 lg:w-72 hover:text-white hover:bg-black">
+                                    <div class="space-y-3">
+                                        <ParagraphXSExtrabold>{ item.card_title }</ParagraphXSExtrabold>
+                                        <ParagraphBaseSemibold>{ item.card2_desc }</ParagraphBaseSemibold>
+                                    </div>
+                                    <ParagraphSmall>{ item.card2_date }</ParagraphSmall>
+                                </div>
+                            </div>
+                            <div class="grid row-span-2 gap-5 lg:flex lg:gap-2">
+                                <div class="border rounded-2xl grid gap-5 p-5 w-full md:w-96 lg:w-72 hover:text-white hover:bg-black">
+                                    <div class="space-y-3">
+                                        <ParagraphXSExtrabold>{ item.card_title }</ParagraphXSExtrabold>
+                                        <ParagraphBaseSemibold>{ item.card3_desc }</ParagraphBaseSemibold>
+                                    </div>
+                                    <ParagraphSmall>{ item.card3_date }</ParagraphSmall>
+                                </div>
+                                <div class="border rounded-2xl grid gap-5 p-5 w-full md:w-96 lg:w-72 hover:text-white hover:bg-black">
+                                    <div class="space-y-3">
+                                        <ParagraphXSExtrabold>{ item.card_title }</ParagraphXSExtrabold>
+                                        <ParagraphBaseSemibold>{ item.card4_desc }</ParagraphBaseSemibold>
+                                    </div>
+                                    <ParagraphSmall>{ item.card4_date }</ParagraphSmall>
+                                </div>
+                            </div>
+                        </div>   
+                    </div>
+                </div>
+            )
+        })
+    }
 </section>
