--- a/src/components/home/services/index.astro
+++ b/src/components/home/services/index.astro
@@ -1,6 +1,58 @@
 ---
 
----
-<section>
+// IMPORT COMPONENTS
+import ServiceCard from "./service-card/index.astro"  
 
+// IMPORT ATOMS
+import Heading2SixXlWhite from "@/atoms-diksha/headings/two/6xl/black/white/index.astro";
+import Heading6White from "@/atoms-diksha/headings/six/white/index.astro";
+
+// CONSTANTS
+const services = [
+    {
+        image_source:"/icons/services/strategic-campaigns-icon.svg",
+        title:"Strategic Campaigns",
+        description:"We develop thoughtful and effective fundraising and engagement campaigns to achieve your goal and make an impact.",
+    },
+    {
+        image_source:"/icons/services/brand-statergy-icon.svg",
+        title:"Brand Strategy",
+        description:"We create research-driven brand strategies that inspire your audience to take action.",
+    },
+    {
+        image_source:"/icons/services/ux-pdf-icon.svg",
+        title:"UX for PDFs",
+        description:"We enhance your PDF documents with our specialized user experience (UX) design to ensure optimal readability, easy navigation, and accessibility for all users.",
+    },
+    {
+        image_source:"/icons/services/graphic-design-icon.svg",
+        title:"Graphic Design",
+        description:"We craft impactful infographics, presentations, and compelling social media graphics that align seamlessly with your brand guidelines and project goals.",    
+    },
+]
+
+---
+
+<section class=" bg-color-primary md:py-24 md:px-16 px-6 py-12">
+    <div class="flex flex-col gap-2 items-center">
+        <div class="flex gap-6 items-center">
+            <hr class="w-16 border-t-2 border-color-secondary"/>
+            <Heading6White>OUR SERVICES</Heading6White>
+        </div>
+        <div class="sm:w-1/3">
+            <Heading2SixXlWhite>
+                What we do to drive results
+                <span class="text-color-secondary">.</span>
+            </Heading2SixXlWhite>
+        </div>
+        <div class="pt-10 md:pt-20 flex flex-col flex-wrap lg:flex-nowrap sm:flex-row gap-8 justify-center">
+            {services.map((service) => (
+                <ServiceCard 
+                    image_source={service.image_source} 
+                    title={service.title} 
+                    description={service.description} 
+                />
+            ))}
+        </div>
+    </div>
 </section>
