--- a/src/atoms-diksha/headings/six/white/index.astro
+++ b/src/atoms-diksha/headings/six/white/index.astro
@@ -1,3 +1,3 @@
-<h6 class="text-white font-larken tracking-widest">
+<h6 class="text-white font-larken tracking-widest uppercase">
     <slot />
 </h6>
