modified picture atom

--- a/src/components/home/about/index.astro
+++ b/src/components/home/about/index.astro
@@ -20,9 +20,13 @@ const about_us = {
 <section class="lg:px-16 lg:py-24 px-6 py-12">
     <div class="flex flex-col gap-6 lg:flex-row justify-between items-center">
         <div class="relative">
-            <Picture image_source="/images/about-us-2.png" image_alt="" styles="w-full"/>
-            <Picture image_source="/images/about-us-1.png" image_alt="" styles="hidden xl:block absolute top-20 -right-40 -z-10"/>
-    </div>
+            <div class="w-full">
+                <Picture image_source="/images/about-us-2.png" image_alt=""/>
+            </div>
+            <div class="hidden xl:block absolute top-20 -right-40 -z-10">
+                <Picture image_source="/images/about-us-1.png" image_alt=""/>
+            </div>
+        </div>
     <div class="lg:w-1/2 flex flex-col gap-6">
         <div class="flex gap-6 items-center">
             <hr class="w-16 border-t-2 border-color-secondary"/>
