--- a/src/atoms-diksha/picture/index.astro
+++ b/src/atoms-diksha/picture/index.astro
@@ -1,8 +1,8 @@
 ---
 
 // GET ASTRO PROPS
-const { image_source, image_alt, styles } = Astro.props;
+const { image_source, image_alt} = Astro.props;
 
 ---
 
-<img src={ image_source } alt={ image_alt } class=`${ styles }`/>
+<img src={ image_source } alt={ image_alt } />
