--- a/src/components/home/work/card/index.astro
+++ b/src/components/home/work/card/index.astro
@@ -3,6 +3,7 @@
 // IMPORT ASTRO ATOMS
 import HeadingFourEmerald from "@/atoms/atoms-shiva/headings/four/xl/bold/emerald/index.astro"
 import HeadingThreeWhite from "@/atoms/atoms-shiva/headings/three/three-xl/semibold/white/index.astro"
+import Link from "@/atoms/links/index.astro"
 import ParagraphBaseSemiboldWhite from "@/atoms/atoms-shiva/paragraphs/base/leading-eight/semibold/white/index.astro"
 import ParagraphBaseWhite from "@/atoms/atoms-shiva/paragraphs/base/leading-eight/white/index.astro"
 import ParagraphFourXlwhite from "@/atoms/atoms-shiva/paragraphs/four-xl/semibold/white/index.astro"
@@ -23,7 +24,7 @@ const {
 
 ---
 
-<a href={ link }>
+<Link href={ link }>
     <div class="px-6 py-8 flex flex-col justify-between bg-work-slides bg-cover bg-center h-screen">
         <div class="flex flex-col gap-4">
             <HeadingThreeWhite>{ title }</HeadingThreeWhite>
@@ -42,4 +43,4 @@ const {
             </div>
         </div>
     </div>
-</a>
+</Link>
