--- a/src/components/home/work/index.astro
+++ b/src/components/home/work/index.astro
@@ -84,7 +84,7 @@ const card_data = [
             <div class="flex flex-col gap-2">
                 <div class="flex items-center gap-4">
                     <div class="w-16 h-0.5 bg-emerald-400"></div>
-                    <HeadingTwo>AWESOME WORK</HeadingTwo>
+                    <HeadingTwo>{ data.title }</HeadingTwo>
                 </div>
                 <HeadingThree>{ data.subtitle }<span class="text-emerald-400 text-4xl md:text-6xl">.</span></HeadingThree>
             </div>
