refactor: added hover animation bg changes

--- a/src/components/home/work/card/index.astro
+++ b/src/components/home/work/card/index.astro
@@ -25,7 +25,7 @@ const {
 ---
 
 <Link href={ link }>
-    <div class="px-6 py-8 flex flex-col justify-between bg-work-slides bg-cover bg-center h-screen">
+    <div class="px-6 py-8 flex flex-col justify-between bg-work-slides hover:bg-home duration-300 bg-cover bg-center h-screen">
         <div class="flex flex-col gap-4">
             <HeadingThreeWhite>{ title }</HeadingThreeWhite>
             <HeadingFourEmerald>{ subtitle_one }</HeadingFourEmerald>
