refactor: rearanged tailwind properties

--- a/src/atoms/atoms-shiva/paragraphs/sm/light/gray/center/index.astro
+++ b/src/atoms/atoms-shiva/paragraphs/sm/light/gray/center/index.astro
@@ -1,3 +1,3 @@
-<p class="text-sm leading-8 lg:leading-9 font-light text-gray-500 font-fira_sans text-center">
+<p class="text-sm text-center text-gray-500 leading-8 lg:leading-9 font-light font-fira_sans">
     <slot/>
 </p>
