--- a/src/atoms/atoms-shiva/headings/four/xl/semibold/center/index.astro
+++ b/src/atoms/atoms-shiva/headings/four/xl/semibold/center/index.astro
@@ -1,3 +1,3 @@
-<h4 class="text-xl font-semibold font-larken text-center">
+<h4 class="text-xl text-center font-semibold font-larken">
     <slot/>
 </h4>
