--- a/src/atoms/atoms-shiva/paragraphs/sm/medium/center/index.astro
+++ b/src/atoms/atoms-shiva/paragraphs/sm/medium/center/index.astro
@@ -1,3 +1,3 @@
-<p class="text-sm font-medium font-fira_sans text-center">
+<p class="text-sm text-center font-medium font-fira_sans">
     <slot/>
 </p>
